# bevy-study

./: Cargo.toml
assets/ldtk/: test_map.ldtk
src/: main.rs
src/config/: camera_movement.rs  camera_plugin.rs  common.rs  debug_plugin.rs  entitiles.rs  mod.rs
src/entity/: mod.rs
src/entity/player/: mod.rs  player_animation_plugin.rs  player_assets_collection.rs  player_spawn_by_stop.rs  player_spawn_by_walking.rs  player_stop_animation.rs  player_walking_animation.rs
src/map/: mod.rs
