[package]
name = "bevy-study"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.24.0"
bevy_asset_loader = { version = "0.20.2", features = ["2d"] }
bevy_pancam = "0.11.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3