[package]
name = "bevy-study"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.24.0"
bevy_pancam = "0.11.1"
bevy_asset_loader = { version = "0.20.2", features = ["2d"] }
bevy_entitiles = { version = "0.9.0" }

thiserror = "1.0.61"
serde = "1.0.202"
serde_json = "1.0.117"
log = "0.4.21"
ldtk_rust = "0.6.0"



# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3